tests/parser/errors/generate_missing_target.mochi
let x = generate { text: "hi" }
