tests/parser/errors/generate_missing_target.err
error[P999]: tests/parser/errors/generate_missing_target.mochi:1:18: unexpected token "{" (expected <ident> "{" (GenerateField ("," GenerateField)*)? ","?? "}")
  --> tests/parser/errors/generate_missing_target.mochi:1:18

  1 | let x = generate { text: "hi" }
    |                  ^

help:
  Parse error occurred. Check syntax near this location.
